[tool.poetry]
name = "lcm-websocket-server"
version = "0.4.1"
description = "WebSocket server for republishing LCM messages"
authors = ["Kevin Barnard <kbarnard@mbari.org>"]
license = "MIT"
readme = "README.md"
packages = [{include = "lcm_websocket_server"}]

[tool.poetry.dependencies]
python = "^3.9"
websockets = "^10.4"
numpy = {version = "^1.26.4", optional = true}
opencv-python-headless = {version = "^4.9.0.80", optional = true}
compas-lcmtypes = {version = "0.1.0", optional = true}
lcmlog-py = "^0.1.0"
lcm = "^1.5.0"
lcmutils = "^0.1.1"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = "^5.12.0"

[tool.poetry.scripts]
lcm-websocket-server = "lcm_websocket_server.apps.json_proxy:main"
lcm-websocket-json-proxy = "lcm_websocket_server.apps.json_proxy:main"
lcm-websocket-jpeg-proxy = "lcm_websocket_server.apps.jpeg_proxy:main"
lcm-websocket-dial-proxy = "lcm_websocket_server.apps.dial_proxy:main"

[tool.poetry.extras]
image = [
    "numpy",
    "opencv-python-headless",
    "compas-lcmtypes"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
