[project]
name = "lcm-websocket-server"
version = "0.7.0"
description = "WebSocket server for republishing LCM messages"
authors = [
    {name = "Kevin Barnard", email = "kbarnard@mbari.org"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "websockets>=10.4",
    "lcmlog-py>=0.1.0",
    "lcm>=1.5.0",
    "lcmutils>=0.1.1",
]

[project.optional-dependencies]
image = [
    "numpy>=1.26.4",
    "opencv-python-headless>=4.9.0.80",
]

[project.scripts]
lcm-websocket-server = "lcm_websocket_server.apps.json_proxy:main"
lcm-websocket-json-proxy = "lcm_websocket_server.apps.json_proxy:main"
lcm-websocket-dial-proxy = "lcm_websocket_server.apps.dial_proxy:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lcm_websocket_server"]

[tool.uv]
dev-dependencies = [
    "pre-commit>=4.2.0",
]
